[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/CubicBezier/CubicBezier_MK2/Head.gd" type="Script" id=1]
[ext_resource path="res://src/CubicBezier/CubicBezier_MK2/TailControl.gd" type="Script" id=2]
[ext_resource path="res://src/CubicBezier/CubicBezier_MK2/HeadControl.gd" type="Script" id=3]
[ext_resource path="res://src/CubicBezier/CubicBezier_MK2/Tail.gd" type="Script" id=4]
[ext_resource path="res://src/CubicBezier/CubicBezier_MK2/Transition.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]

[node name="Transition" type="Node2D"]
script = ExtResource( 5 )

[node name="Head" type="KinematicBody2D" parent="."]
input_pickable = true
collision_layer = 2
collision_mask = 3
collision/safe_margin = 1.0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
shape = SubResource( 1 )

[node name="HeadControl" type="KinematicBody2D" parent="."]
input_pickable = true
collision_layer = 8
collision_mask = 9
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeadControl"]
shape = SubResource( 1 )

[node name="TailControl" type="KinematicBody2D" parent="."]
input_pickable = true
collision_layer = 8
collision_mask = 9
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TailControl"]
shape = SubResource( 1 )

[node name="Tail" type="KinematicBody2D" parent="."]
input_pickable = true
collision_layer = 2
collision_mask = 3
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tail"]
shape = SubResource( 1 )

[node name="PriorityLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransitionEquation" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="Head" to="Head" method="_on_Head_mouse_entered"]
[connection signal="mouse_exited" from="Head" to="Head" method="_on_Head_mouse_exited"]
[connection signal="move" from="Head" to="." method="_on_Head_move"]
[connection signal="mouse_entered" from="HeadControl" to="HeadControl" method="_on_HeadControl_mouse_entered"]
[connection signal="mouse_exited" from="HeadControl" to="HeadControl" method="_on_HeadControl_mouse_exited"]
[connection signal="mouse_entered" from="TailControl" to="TailControl" method="_on_TailControl_mouse_entered"]
[connection signal="mouse_exited" from="TailControl" to="TailControl" method="_on_TailControl_mouse_exited"]
[connection signal="mouse_entered" from="Tail" to="Tail" method="_on_Tail_mouse_entered"]
[connection signal="mouse_exited" from="Tail" to="Tail" method="_on_Tail_mouse_exited"]
